prevent collapse

--- a/src/breakpoints.scss
+++ b/src/breakpoints.scss
@@ -34,7 +34,7 @@ $xlVerticalSpace: 60px;
 
     @include media(">=xxlMin") {
         margin: auto;
-        max-width: 2000px;
+        width: 2000px;
     }
 
 }
